# TodeX_backend

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: API.md  BUILD_RUN.md
src/: app_state.rs  config.rs  error.rs  main.rs  server_runner.rs  transport.rs  transport_crypto.rs  tui.rs
src/codex_gateway/: mod.rs
src/event/: bus.rs  mod.rs
src/server/: mod.rs  protocol.rs  routes.rs  websocket.rs
tests/: e2e_real_codex.rs
