[package]
name = "todex-agentd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
dashmap = "6"
futures-util = "0.3"
hkdf = "0.12"
pqcrypto-mlkem = "0.1"
pqcrypto-traits = "0.3"
qrcodegen = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
toml_edit = "0.22"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
tokio-tungstenite = "0.29"
tungstenite = "0.29"
